styles/screen.css
html, body { height: 100%; }

body {
    font-family: 'Helvetica Neue', 'Helvetica Neue', Helvetica, Arial, sans-serif;
    font-size: 16px;
    font-style: normal;
    font-weight: 400;
    text-shadow: none;
    text-decoration: none;
    text-transform: none;
    letter-spacing: 0em;
    word-spacing: 0em;
    line-height: 1.4;
    background: url(/images/main_bg.jpg) repeat-x 0 -26px #82b64a;
}

/* General styles */

h1,h2,h3,h4,h5,h6 {
    font-weight: normal;
    font-family: 'Georgia', Serif;
    line-height: 1.4;
    margin-bottom: 0.5em;
}

.title {
    font-family: 'Georgia', Serif;
}

a {
    color: #DBF3C0;
    text-decoration: none;
    padding: 0 2px;
    text-decoration: none;
    -moz-border-radius: 3px;
    -webkit-border-radius: 3px;
    border-radius: 3px;
}

a:hover {
    background: #c0daa4;
    color: #000000;
    text-shadow: 1px 1px 5px rgba(0,0,0,0.4);
    text-decoration: none;
}

h1 {
    font-size: 25px;
}

h2 {
    font-size: 22px;
}


h3 {
    font-size: 18px;
}

h4{
    font-size: 16px;
}

h5{
    font-size: 14px;
}

p {
    margin-bottom: 1em;
}

blockquote {
    margin: 0 2em 1em;
    font-style: italic;
}

pre {
    padding: 1em; margin: 1.5em 0;
    background: #C0DAA4;
    color: #000;
    display: block;
    font-size: 12px;
    line-height: 1.5em;
    font-family: monospace;
    white-space: pre-wrap;       /* css-3 */
    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
    white-space: -pre-wrap;      /* Opera 4-6 */
    white-space: -o-pre-wrap;    /* Opera 7 */
    word-wrap: break-word;       /* Internet Explorer 5.5+ */

    -moz-border-radius: 10px;
    -webkit-border-radius: 10px;
    border-radius: 10px;

    -moz-box-shadow: 5px 5px 20px #647F47;
    -webkit-box-shadow: 5px 5px 20px #647F47;
    box-shadow: 5px 5px 20px #647F47;
}

code {background: #c0daa4; color: #000; font-family: monospace; font-size: 15px; padding-left: 3px; padding-right: 3px; padding-top: 1px; padding-bottom: 1px;}

ul{
    margin: 0 0 1em 1.5em;
    list-style: disc outside;
}
ul li{
    line-height: 1.5em;
    padding-left: 0.2em;
}
ul li.caption{ /* Apply this class to the first list item in a list to give it a caption */
    font-variant: small-caps;
    list-style: none;
    color: #000;
}
li > ul, li > ol{
    margin-left: 2em;
}
li > ul li, li > ol li{
}
ol{
    margin-bottom: 1.8em;
    list-style: decimal inside;
}
ol li{
    line-height: 1.5em;
}

dt {
    list-style: none;
    font-style: italic;
    font-weight: bold;
    margin-bottom: 0.5em;
    padding-bottom: 0.2em;
    font-size: 1.1em;
    font-family: 'Georgia',serif;
    border-bottom: 1px solid #AAC986;
}

dt a:after {
    content: ':';
}

dd {
    margin-left:    5em;
}


table {
    width: 100%;
    padding: 0px;
    border: 1px solid #000;
    line-height: 1.5em;
    margin-top: 1em;
    margin-bottom: 1em;
    /* CSS3 Box Shadow */
    -moz-box-shadow: 0 0 3px #000;
    -webkit-box-shadow: 0 0 3px #000;
    box-shadow: 0 0 3px #000;
}

table th {
    text-align: center;
    background: #76A543;
    border: 1px solid #000;
    padding: 5px;
}

table td {
    border: 1px solid #000;
    padding: 5px;
}

.rounded {
  -moz-border-radius: 10px;
  -webkit-border-radius: 10px;
  border-radius: 10px;
}

/* Page layout */
#wrapper {
    height: auto;
    min-height: 101%; /* have scroll bar always there, so things won't jump around */
    background: url('/images/top.jpg') no-repeat 50% 0;
}

#all {
    position: relative;
    height: 100%;
    width: 940px;
    margin: 0 auto;
}

/* Header */

#header {
    background: url('/images/header.png') no-repeat 152px 66px;
    height: 240px;
    position: relative;
}

#header #elasticsearch {
    position: absolute;
    width: 450px;
    height: 100px;
    top: 95px;
    left: 300px;
}

#header #section  {
    font-size: 45px;
    left: 307px;
    position: absolute;
    top: 175px;
}

#header a:hover {
    background: transparent;
    color: inherit;;
    text-shadow: none;
    text-decoration: none;
}

#header a span {
    display: none;
}

.page_title {
    height: 60px;
    font-size: 30px;
    padding: 20px 0 0 185px;
    margin: 0;
}


#top_left_menu {
    position: absolute;
    list-style: none;
    top: 88px;
    right: 0;
    font-family: 'Georgia', serif;
    z-index: 1000;
}

#top_left_menu a {
    width: 90px;
    display: block;
    padding: 0 2px;
    color: #c0daa4;
    text-decoration: none;
    -moz-border-radius: 3px;
    -webkit-border-radius: 3px;
    border-radius: 3px;
}

#top_left_menu a:hover {
    color: #000000;
}


/* Content */
#header_spacer {
    height: 100px;
}

/* Home page */

#home {
    width: 760px;
    margin: auto;
    position: relative;
}

#home .img_left {
    padding-left: 150px;
    margin-bottom: 40px;
}

#home .img_left img {
    float: left;
    margin-left: -150px;
}

#home .img_right {
    padding-right: 150px;
    margin-bottom: 40px;
}

#home .img_right img {
    float: right;
    margin-right: -150px;
}

#home #who_using {
  margin: 1.5em 0 1.5em -1em;
  width: 100%;
}

#home #who_using a {
  padding: 1em 1em 0.5em 1em;
  display: inline-block;
  width: 100%;
  height: 100%;
}

#home #who_using h3 {
  display: inline-block;
  margin-right: 1em;
  bottom: 0.5em;
  position: relative;
}

#home #who_using img {
  margin: 0 15px 0 5px;
}

.news-ticker {
  margin: 1em 0 1em 0;
  background-color: rgba(183, 214, 120, 0.95);
  -moz-border-radius: 3px;
  -webkit-border-radius: 3px;
  border-radius: 3px;
  height: 1.5em;
  width: 805px;
  line-height: 1em;
  top: -80px;
  left: 0px;
  position: absolute;
  overflow: hidden;
}

.news-ticker:after {
  display: table;
  content: "";
  clear: both;
}

.news-ticker h3 {
  font-family: 'Helvetica Neue', 'Helvetica Neue', Helvetica, Arial, sans-serif;
  font-size: 0.95em;
  float: left;
  padding: 0; margin: 0; margin-right: 0.5em;
}

.news-ticker h3 a {
  color: rgba(0, 0, 0, 0.8);
  background-color: rgba(255, 255, 255, 0.2);
  padding: 0.1em 0.5em 0.1em 0.5em;
  height: 100%;
  display: inline-block;
}

.news-ticker h3 a:hover {
  background-color: rgba(255, 255, 255, 0.6);
}

.news-ticker .loading {
  color: rgba(0,0,0,0.7);
  font-size: 80%;
  padding-top: 0.35em;
}

.news-ticker a:hover {
  pointer: cursor !important;
}

.news-ticker ul {
  font-size: 0.95em;
  list-style-type: none;
  padding: 0; margin: 0;
  height: 100%;
  margin-left: 4em;
  line-height: 1.1em;
  position: relative;
}

.news-ticker li {
  padding: 0; margin: 0.15em 0 0 0;
  height: 100%;
  display: inline-block;
  position: absolute;
  top: 0; left: 0;
}

.news-ticker li a {
  color: #000;
  text-decoration: underline;
}

.news-ticker li .date {
  color: rgba(0,0,0,0.7);
  font-size: 80%;
  bottom: 0.05em;
  position: relative;
}

.news-ticker.expanded {
  overflow: visible;
  height: auto;
}

.news-ticker.expanded li {
  position: relative;
  display: block !important;
  opacity: 1;
  border-bottom: 1px solid rgba(255,255,255,0.2);
}
.news-ticker.expanded li:last-child {
  border-bottom: none;
}

.news-ticker a {
  text-decoration: none !important;
}

#news.news-ticker ul {
  margin-left: 5em;
}
#training-ticker.news-ticker {
  width: 925px;
}
#training-ticker.news-ticker ul {
  margin-left: 5em;
}


/* Post lists */
.posts {
    list-style: none;
    width: 600px;
    margin: auto;
    font-size: 18px;
}

.posts li {
    clear: right;
}

.posts a {
    display: block;
    padding: 0 10px;
}

.posts a:hover {
    background: #c0daa4;
    color: #000000;
    text-shadow: 1px 1px 5px #eee;
    -moz-border-radius: 10px;
    -webkit-border-radius: 10px;
    border-radius: 10px;
    text-decoration: none;
}

.posts .postdate {
    float: right;
    color: black;
}


/* Download pages */
.download {
    width: 600px;
    margin-left: 180px;
}

.download_link {
    text-align: center;
    margin: 0 0 40px;
    font-size: 30px;
}


/* Guide */
.guide {
    width: 940px;
}

.guide .index {
    width: 600px;
    margin-left: 200px;
    list-style-type: upper-roman;
}

.guide .index ol {
    list-style-type: decimal;
}

.guide .guide_content {
    width: 650px;
}

#guide_sidebar {
    float:  right;
    width:  200px;
}


/* Blogposts & Tutorials */
.blog {
    width: 760px;
    margin: auto;
}


/* Tutorials */
.tutorials {
    width: 760px;
    margin: auto;
}

/* Videos */
.videos {
    width: 760px;
    margin: auto;
}

/* Community */
.community {
    width: 600px;
    margin: auto;
}

/* Users */
.users {
    margin: auto;
}

#users .img_left {
    padding-left: 150px;
    margin-bottom: 40px;
}

#users .img_left img {
    float: left;
    margin-left: -150px;
}

#users .img_right {
    padding-right: 150px;
    margin-bottom: 40px;
}

#users .img_right img {
    float: right;
    margin-right: -150px;
}

#forum {
    width: 940px;
    margin-left: -170px;
}

#empty, #footer {
    height: 17px;
    clear: both;
}

#footer {
    position: absolute;
    left: 0;
    bottom: 0;
    width: 100%;
}


.thinseparator { width: 100%; height: 0.1em; background: #222222; clear: both; margin-top: 0.5em; margin-bottom: 0.5em;}
.separator { width: 100%; height: 0.3em; background: #222222; clear: both; margin-top: 0.5em; margin-bottom: 0.5em;}

#header a {
    color: #000;
    text-decoration: none;
}
#header a:hover {
    color: #000;
    text-decoration: none;
}

#guide_all {
    width: 100%;
    height: 100%;
}
#guide_content {
    float: left;
    width: 600px;
}
#guide_sidebar {
    float: right;
    width: 200px;
    font-size: 16px;
}
#guide_sidebar h3 {
    font-size: 20px;
    margin-bottom: 5px;
}

.center {margin: auto;}
.textcenter {text-align: center;}
.right-float{ /* Float any item to the right */
    float: right;
    margin-left: 2em;
    margin-right: 0;
}
.left-float{ /* Float any item to the left */
    float: left;
    margin-right: 2em;
    margin-left: 0;
}
/* Sets styles for any 'end' grids - this class MUST be given to a grid that is the last in a horizontal series */
.end{
    margin-left: 0 !important;
    margin-right: 0 !important;
}
img{
    font-size: 1em;
}
img.left-img{ /* Float any image to the LEFT and give it some margin */
    font-size: 1em;
    float: left;
    padding: 4px;
    margin-bottom: 10px;
    margin-right: 10px;
    margin-top: 3px;
}
img.right-img{ /* Float any image to the RIGHT and give it some margin */
    font-size: 1em;
    float: right;
    padding: 4px;
    margin-bottom: 10px;
    margin-left: 10px;
    margin-top: 3px;
}


/*DISQUS*/

.dsq-global-toolbar-container {
    border: none !important;
    -moz-box-shadow: 0 0 0;
    -webkit-box-shadow: 0 0 0;
    box-shadow: 0 0 0;
}

.dsq-global-toolbar-likes {
    border: none !important;
}

